# pantheon_bot

./: .env.example  .gitignore  Dockerfile  SHELL_ALLOWLIST  docker-compose.yml  push_update.sh  pyproject.toml  run_apex.sh  test_memory.py  verify_memory.py
deploy/: apex.service  install.sh
pantheon/: __init__.py  cli_wrapper.py  config.py  configurator.py  main.py
pantheon/builtin_tools/: __init__.py  agent_creator.py  allowlist_manager.py  cloud.py  config_manager.py  file_editor.py  memory_tools.py  shell.py
pantheon/channels/: __init__.py  cli.py  telegram.py
pantheon/core/: conversation.py  interaction.py  llm.py  prompt.py  tools.py
pantheon/memory/: __init__.py  mem0_store.py
pantheon/scheduler/: cron.py  heartbeat.py
prompts/: SOUL.md  TOOLS.md  USER.md
schedules/: CRON.md  HEARTBEAT.md
